--- a/settings/site.ini
+++ b/settings/site.ini
@@ -563,9 +563,10 @@ UserCreatorID=14
 # md5_site generates password hash from site, user and password
 # plaintext does not generate a hash but has the password as it is, this is not
 # recommended since it is a huge security risc.
+# bcrypt generates hash from password only
 # note: password hashes generated with md5_site will not work after
 #       changing the site name.
-HashType=md5_user
+HashType=bcrypt
 # What SiteName should be used when hashing the user_password
 # with the 'md5_site' HashType
 SiteName=ez.no
